src/auryn/snapshots/auryn__auryn__parser__tests__struct.snap
---
source: src/auryn/parser.rs
expression: "verify(r#\"\n            struct Foo {\n                some_value: I32,\n                b: ldaksjf\n            }\n            \"#)"
---
syntax_tree:
0..112 Root
|0..112 File
||Newline `\n`
||Whitespace `            `
||13..99 Item
|||13..99 Struct
||||KeywordStruct `struct`
||||Whitespace ` `
||||Identifier `Foo`
||||Whitespace ` `
||||BraceOpen `{`
||||Newline `\n`
||||Whitespace `                `
||||42..98 StructBody
|||||42..57 StructuralTypeField
||||||Identifier `some_value`
||||||Colon `:`
||||||Whitespace ` `
||||||54..57 Type
|||||||54..57 Ident
||||||||Identifier `I32`
|||||Comma `,`
|||||Newline `\n`
|||||Whitespace `                `
|||||75..98 StructuralTypeField
||||||Identifier `b`
||||||Colon `:`
||||||Whitespace ` `
||||||78..98 Type
|||||||78..98 Ident
||||||||Identifier `ldaksjf`
||||||||Newline `\n`
||||||||Whitespace `            `
||||BraceClose `}`
||Newline `\n`
||Whitespace `            `

diagnostics:
