src/auryn/snapshots/auryn__auryn__parser__tests__variable_update-2.snap
---
source: src/auryn/parser.rs
expression: "verify_block(\"a *= 3\")"
---
syntax_tree:
0..6 Root
|0..6 Block
||0..6 Statement
|||0..6 VariableUpdate
||||0..2 Path
|||||0..2 Expression
||||||0..2 Value
|||||||0..2 Ident
||||||||Identifier `a`
||||||||Whitespace ` `
||||TimesAssign `*=`
||||Whitespace ` `
||||5..6 Expression
|||||5..6 Value
||||||5..6 NumberLiteral
|||||||NumberLiteral `3`

diagnostics:
